<resources>
    <string name="app_name">SubmissionOne</string>
    <string name="app_name_two">SubmissionTwo</string>
    <string name="daftar">Daftar</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sudah_ada_akun_login">Sudah ada akun ? Login</string>
    <string name="login">Login</string>
    <string name="add_story">Add Story</string>
    <string name="logout">Logout</string>
    <string name="galeri">Galeri</string>
    <string name="kamera">Kamera</string>
    <string name="submit">Submit</string>
    <string name="deskripsi_gambar">Deskripsi Gambar ...</string>
    <string name="detail">Detail</string>
    <string name="kirim">Kirim</string>
    <string name="upload">Upload</string>
    <string name="tambah_story">Tambah Story</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="gambar_hint">Gambar</string>
    <string name="belum_ada_akun">Belum ada akun ? Daftar</string>
    <string name="email_atau_password_salah">Email atau Password salah !</string>
    <string name="latlongstory">%s / %s</string>

<!--    Map-->
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="tambah_lokasi">Tambah Lokasi</string>
    <string name="timestamp">Timestamp</string>
    <string name="maps">Maps</string>
    <string name="reload">Reload</string>
</resources>