<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.story.add.AddStoryActivity">

    <TextView
        android:id="@+id/tvAddJudul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tambah_story"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivAddImage"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:src="@drawable/baseline_broken_image_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddJudul" />

    <Button
        android:id="@+id/btnAddGaleri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/galeri"
        app:layout_constraintStart_toStartOf="@+id/ivAddImage"
        app:layout_constraintTop_toBottomOf="@+id/ivAddImage" />

    <Button
        android:id="@+id/btnAddKamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/kamera"
        app:layout_constraintEnd_toEndOf="@+id/ivAddImage"
        app:layout_constraintTop_toBottomOf="@+id/ivAddImage" />

    <EditText
        android:id="@+id/etDeskripsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/deskripsi_gambar"
        android:inputType="textMultiLine"
        android:lines="4"
        app:layout_constraintEnd_toEndOf="@+id/btnAddKamera"
        app:layout_constraintStart_toStartOf="@+id/btnAddGaleri"
        app:layout_constraintTop_toBottomOf="@+id/btnAddKamera" />

    <Button
        android:id="@+id/btnUploadStory"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        app:layout_constraintEnd_toEndOf="@+id/ivAddImage"
        app:layout_constraintStart_toStartOf="@+id/ivAddImage"
        app:layout_constraintTop_toBottomOf="@+id/etDeskripsi" />

</androidx.constraintlayout.widget.ConstraintLayout>