<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ListStory"
        android:padding="24dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivListStory"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/baseline_broken_image_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/gambar_hint" />

        <TextView
            android:id="@+id/tvListStoryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            tools:text="@string/nama"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/ivListStory"
            app:layout_constraintStart_toStartOf="@+id/ivListStory"
            app:layout_constraintTop_toBottomOf="@+id/ivListStory" />

        <TextView
            android:id="@+id/tvTimestamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Timestamp"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/ivListStory"
            app:layout_constraintStart_toStartOf="@+id/ivListStory"
            app:layout_constraintTop_toBottomOf="@+id/tvListStoryName" />

        <TextView
            android:id="@+id/tvLatLong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/ivListStory"
            app:layout_constraintStart_toStartOf="@+id/ivListStory"
            app:layout_constraintTop_toBottomOf="@+id/tvTimestamp"
            tools:text="@string/timestamp" />

        <TextView
            android:id="@+id/tvListStoryDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/deskripsi"
            app:layout_constraintEnd_toEndOf="@+id/ivListStory"
            app:layout_constraintStart_toStartOf="@+id/ivListStory"
            app:layout_constraintTop_toBottomOf="@+id/tvLatLong"
            tools:textSize="16sp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>